@@ -1,3 +1,7 @@
+2004-02-02  Zoltan Varga  <vargaz@freemail.hu>
+
+	* sparc/tramp.c: Implement all floating point argument passing conventions in
+	Sparc V8. Also fix structure passing in V8.
 
 Thu Nov 13 16:24:29 CET 2003 Paolo Molaro <lupus@ximian.com>
 
